--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-
+MONGO_URI=mongodb+srv://maxuser:max123@cluster0.c2fmr.mongodb.net/proyecto_db?retryWrites=true&w=majority
+FLASK_ENV=development
  
